service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mailpit
  name: mailpit
spec:
  ports:
  - port: 8025
    name: http
    protocol: TCP
    targetPort: http
  - port: 1025
    name: smtp
    protocol: TCP
    targetPort: smtp
