ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailpit
spec:
  ingressClassName: nginx
  rules:
    - host: "mailpit.192.168.49.2.nip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailpit
                port:
                  number: 8025
